--- a/src/app/pages/streams-detail/stream-summary/stream-summary.html
+++ b/src/app/pages/streams-detail/stream-summary/stream-summary.html
@@ -1,22 +1,35 @@
 <div class="mb-0 sm:mb-4 flex flex-wrap items-end">
   <div class="w-full sm:w-7/12">
-    <a
-      class="cover aspect-ratio-16-9"
-      [attr.href]="'https://youtu.be/' + stream.platformId"
-      target="_blank"
-    >
+    <a class="cover aspect-ratio-16-9" [attr.href]="link" target="_blank">
       <img
         class="img rounded absolute w-full h-full object-center object-cover"
+        loading="lazy"
         fill
         [ngSrc]="stream.thumbnailUrl + '?ngsw-bypass'"
       />
+
+      <ng-container [ngSwitch]="stream.platform">
+        <div
+          *ngSwitchCase="'YOUTUBE'"
+          class="bg-[#d74432] absolute top-1 left-1 text-white m-0 max-h-[1.2rem] rounded font-medium text-xs/3 py-[3px] px-1"
+        >
+          YouTube
+        </div>
+
+        <div
+          *ngSwitchCase="'TWITCH'"
+          class="bg-[#9146ff] absolute top-1 left-1 text-white m-0 max-h-[1.2rem] rounded font-medium text-xs/3 py-[3px] px-1"
+        >
+          Twitch
+        </div>
+      </ng-container>
     </a>
   </div>
 
   <div class="box-border py-4 pl-0 sm:pl-4 w-full sm:w-5/12">
     <a
       class="text-inherit no-underline block mb-4 break-words mat-h3"
-      [attr.href]="'https://youtu.be/' + stream.platformId"
+      [attr.href]="link"
       target="_blank"
     >
       {{ stream.title }}
@@ -65,7 +78,7 @@
       {{ stream?.viewerMax ? (stream?.viewerMax | number) : '---' }}
     </div>
   </div>
-  <div>
+  <div *ngIf="stream?.platform === 'YOUTUBE'">
     <div class="mat-small mat-secondary-text">
       <span class="align-middle"> Likes / dislikes </span>
       <mat-icon
@@ -93,7 +106,11 @@
       <mat-icon
         class="!h-[12px] !w-[12px] leading-[12px] align-middle"
         svgIcon="information_outline"
-        matTooltip="Only included YouTube Super Chat & Super Sticker"
+        [matTooltip]="
+          'Only includes ' + (stream?.platform == 'YOUTUBE'
+            ? 'YouTube Super Chat & Super Sticker'
+            : 'Twitch Cheering & Hyper Chat')
+        "
         matTooltipPosition="above"
       />
     </div>
