--- a/src/app/layout/sidenav/menu.scss
+++ b/src/app/layout/sidenav/menu.scss
@@ -32,7 +32,7 @@ hls-sidenav-menu .mat-mdc-list-item {
 
     .mat-icon,
     .mat-mdc-list-item-title {
-      color: mat.get-color-from-palette($primary) !important;
+      color: #80cbc4 !important;
     }
   }
 
