--- a/src/app/components/filter-group/vtuber-filter/vtuber-filter.html
+++ b/src/app/components/filter-group/vtuber-filter/vtuber-filter.html
@@ -30,32 +30,36 @@
   (detach)="_isOpen = false"
 >
   <div
-    class="vtuber-filter-overlay mat-bg-card mat-elevation-z4 rounded m-0 p-0"
+    class="mat-bg-card mat-elevation-z4 rounded m-0 p-0 max-h-80 overflow-y-auto"
     [@transformPanel]="_isOpen"
   >
+    <div class="sticky text-sm flex top-0 mat-bg-card px-4 py-2 z-50">
+      <div class="flex-1">Filter by vtuber</div>
+      <div
+        tabindex="0"
+        role="button"
+        class="cursor-pointer"
+        (click)="_isOpen = false; clear()"
+      >
+        clear
+      </div>
+    </div>
     <mat-selection-list
-      class="max-h-80 overflow-y-auto"
+      class="-mat-list-density-2 !p-0"
       (selectionChange)="onListChange($event)"
     >
-      <div
-        class="sticky text-sm flex top-[-8px] mat-bg-card px-4 pb-2 pt-4 z-50 mt-[-8px]"
-      >
-        <div class="flex-1">Filter by vtuber</div>
-        <div
-          tabindex="0"
-          role="button"
-          class="cursor-pointer"
-          (click)="_isOpen = false; clear()"
-        >
-          clear
-        </div>
-      </div>
       <mat-list-option
         *ngFor="let vtb of _vtubers"
         [value]="vtb"
         [selected]="selected.has(vtb)"
       >
-        <img height="32" width="32" matListItemAvatar [src]="vtb | avatar" />
+        <img
+          class="!h-8 !w-8"
+          height="32"
+          width="32"
+          matListItemAvatar
+          [src]="vtb | avatar"
+        />
         {{vtb | name}}
       </mat-list-option>
     </mat-selection-list>
