chore: hls -> vts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,11 @@
     [fixedInViewport]="true"
     [fixedTopGap]="drawerService.sidenavFixedTopGap()"
   >
-    <hls-sidenav />
+    <vts-sidenav />
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <hls-header />
+    <vts-header />
     <div
       class="pt-16 min-h-[calc(100vh-4rem)] mx-auto max-w-4xl overflow-x-auto"
     >
