--- a/src/app/components/menu/menu.scss
+++ b/src/app/components/menu/menu.scss
@@ -1,6 +1,6 @@
 @use "@angular/material" as mat;
 
-.hls-menu-panel {
+.vts-menu-panel {
   .mat-mdc-menu-item-text {
     white-space: nowrap !important;
     width: 100%;
