--- a/src/app/components/stream-list/stream-item/stream-item.scss
+++ b/src/app/components/stream-list/stream-item/stream-item.scss
@@ -1,11 +1,11 @@
-hls-stream-item {
+vts-stream-item {
   .keyword {
     background-color: #fff8c5;
   }
 }
 
 .dark {
-  hls-stream-item {
+  vts-stream-item {
     .keyword {
       background-color: rgba(210, 153, 34, 0.4);
     }
