--- a/src/app/pages/settings/youtube-settings/youtube-settings.html
+++ b/src/app/pages/settings/youtube-settings/youtube-settings.html
@@ -19,7 +19,7 @@
       <button mat-stroked-button (click)="google.logout()">Sign Out</button>
     </div>
 
-    <!-- <hls-playlist-selector /> -->
+    <!-- <vts-playlist-selector /> -->
   </div>
 
   <ng-template #login>
