--- a/src/app/components/filter-group/platform-filter/platform-filter.html
+++ b/src/app/components/filter-group/platform-filter/platform-filter.html
@@ -19,7 +19,7 @@
 
 <mat-menu
   #menu="matMenu"
-  class="dense-menu hls-menu-panel max-h-80"
+  class="dense-menu vts-menu-panel max-h-80"
   xPosition="before"
 >
   <button *ngIf="!hideYouTube" mat-menu-item (click)="handleChange('YOUTUBE')">
