--- a/src/app/pages/channel-stats/views/views.html
+++ b/src/app/pages/channel-stats/views/views.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="channels().length == 0; else table">
-  <hls-select-vtuber-alert />
+  <vts-select-vtuber-alert />
 </ng-container>
 
 <ng-template #table>
@@ -7,13 +7,13 @@
     <div
       class="flex flex-row items-center p-4 gap-2 overflow-y-hidden overflow-x-auto"
     >
-      <hls-platform-filter hideTwitch (onChange)="platform.set($event)" />
+      <vts-platform-filter hideTwitch (onChange)="platform.set($event)" />
 
-      <hls-vtuber-filter (selectedChange)="vtuberSelected.set($event)" />
+      <vts-vtuber-filter (selectedChange)="vtuberSelected.set($event)" />
 
       <div class="flex-1"></div>
 
-      <hls-refresh-button
+      <vts-refresh-button
         [isLoading]="result.isFetching"
         [refresh]="result.refetch"
         [updatedAt]="updatedAt()"
@@ -21,7 +21,7 @@
     </div>
 
     <div class="px-4 overflow-x-auto">
-      <hls-channel-stats-table
+      <vts-channel-stats-table
         *ngIf="!result.error"
         valueLabel="Views"
         [dataSource]="data()"
