--- a/src/app/pages/streams-detail/stream-chat-stats/stream-chat-stats.html
+++ b/src/app/pages/streams-detail/stream-chat-stats/stream-chat-stats.html
@@ -3,7 +3,7 @@
     <div class="mat-h3 m-0" i18n="@@liveChat">Live Chat</div>
   </div>
 
-  <hls-chart
+  <vts-chart
     *ngIf="rows && rows.length > 0"
     [height]="300"
     [options]="option"
