--- a/src/app/pages/streams-detail/streams-detail.html
+++ b/src/app/pages/streams-detail/streams-detail.html
@@ -1,11 +1,11 @@
 <div class="p-4 mb-15" *ngIf="streamQry | useQry as result">
   <ng-container *ngIf="result.data">
-    <hls-stream-summary [stream]="result.data" />
+    <vts-stream-summary [stream]="result.data" />
 
-    <hls-stream-viewer-stats [stream]="result.data" />
+    <vts-stream-viewer-stats [stream]="result.data" />
 
-    <hls-stream-chat-stats [stream]="result.data" />
+    <vts-stream-chat-stats [stream]="result.data" />
 
-    <hls-stream-events [stream]="result.data" />
+    <vts-stream-events [stream]="result.data" />
   </ng-container>
 </div>
