--- a/src/app/pages/streams-list/streams-list.html
+++ b/src/app/pages/streams-list/streams-list.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="channels().length == 0; else list">
-  <hls-select-vtuber-alert />
+  <vts-select-vtuber-alert />
 </ng-container>
 
 <ng-template #list>
@@ -7,28 +7,28 @@
     <div
       class="flex flex-row items-center mb-4 gap-2 overflow-y-hidden overflow-x-auto"
     >
-      <hls-vtuber-filter (selectedChange)="selectedVtuberIds.set($event)" />
+      <vts-vtuber-filter (selectedChange)="selectedVtuberIds.set($event)" />
 
-      <hls-date-filter
+      <vts-date-filter
         *ngIf="route.snapshot.data.status !== 'scheduled'"
         (selectedChange)="selectedDateRange.set($event)"
       />
 
-      <hls-keyword-input
+      <vts-keyword-input
         *ngIf="route.snapshot.data.status !== 'scheduled'"
         (onChange)="searchKeyword.set($event)"
       />
 
       <div class="flex-1"></div>
 
-      <hls-refresh-button
+      <vts-refresh-button
         [isLoading]="result.isFetching"
         [refresh]="result.refetch"
         [updatedAt]="result.data?.pages[0].updatedAt"
       />
     </div>
 
-    <hls-stream-list
+    <vts-stream-list
       *ngIf="!result.isError"
       [groupBy]="true"
       [loading]="result.isLoading"
