i18: update message id format

--- a/src/app/components/stream-list/stream-item/stream-item.html
+++ b/src/app/components/stream-list/stream-item/stream-item.html
@@ -86,13 +86,13 @@
 >
   <mat-icon class="!h-4 !w-4 align-middle mr-1" svgIcon="eye" />
 
-  <span class="mr-1" i18n-title="@@averageViewers" title="Average Viewers">
+  <span class="mr-1" i18n-title="@@average-viewers" title="Average Viewers">
     {{ (stream.viewerAvg | number) || "----" }}
   </span>
 
   <span class="mr-1 select-none">/</span>
 
-  <span class="mr-2" i18n-title="@@maximumViewers" title="Maximum Viewers">
+  <span class="mr-2" i18n-title="@@maximum-viewers" title="Maximum Viewers">
     {{ (stream.viewerMax | number) || "----" }}
   </span>
 
