--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -27,7 +27,7 @@
   <button
     mat-icon-button
     matTooltip="Select Language"
-    i18n-matTooltip="@@selectLanguage"
+    i18n-matTooltip="@@select-language"
     [matMenuTriggerFor]="menu"
   >
     <mat-icon svgIcon="web" />
@@ -44,7 +44,7 @@
   <button
     mat-icon-button
     matTooltip="Toggle Dark Mode"
-    i18n-matTooltip="@@toggleDarkMode"
+    i18n-matTooltip="@@toggle-dark-mode"
     (click)="nextTheme()"
   >
     <mat-icon svgIcon="theme" />
