--- a/src/app/pages/streams-detail/stream-chat-stats/stream-chat-stats.html
+++ b/src/app/pages/streams-detail/stream-chat-stats/stream-chat-stats.html
@@ -1,6 +1,6 @@
 <div class="mat-border-divider rounded border border-solid mb-4">
   <div class="mx-4 mt-4">
-    <div class="mat-h3 m-0" i18n="@@liveChat">Live Chat</div>
+    <div class="mat-h3 m-0" i18n="@@live-chat">Live Chat</div>
   </div>
 
   <vts-chart
