--- a/src/app/pages/vtubers-detail/stream-time/stream-time.html
+++ b/src/app/pages/vtubers-detail/stream-time/stream-time.html
@@ -4,7 +4,7 @@
 >
   <div class="flex flex-row items-center mb-4">
     <div class="flex-1">
-      <div class="mat-h3 m-0" i18n="@@streamTimes">Stream Times</div>
+      <div class="mat-h3 m-0" i18n="@@stream-times">Stream Times</div>
       <div class="mat-text-caption mat-secondary-text">
         {{ getTotal(result?.data) | formatDuration }} in 45 weeks
       </div>
