--- a/src/app/layout/sidenav/sidenav.html
+++ b/src/app/layout/sidenav/sidenav.html
@@ -1,8 +1,16 @@
 <div class="w-64 min-h-full flex flex-col mr-4">
   <mat-nav-list class="flex-1">
-    <vts-sidenav-menu headline="CHANNEL" [items]="channelsItems" />
+    <vts-sidenav-menu
+      i18n-headline="@@channel"
+      headline="channel"
+      [items]="channelsItems"
+    />
     <mat-divider class="!mr-2 !my-2" />
-    <vts-sidenav-menu headline="STREAM" [items]="streamsItems" />
+    <vts-sidenav-menu
+      i18n-headline="@@stream"
+      headline="stream"
+      [items]="streamsItems"
+    />
     <mat-divider class="!mr-2 !my-2" />
     <vts-sidenav-menu [items]="extraItems" />
   </mat-nav-list>
