--- a/src/app/pages/streams-detail/stream-viewer-stats/stream-viewer-stats.html
+++ b/src/app/pages/streams-detail/stream-viewer-stats/stream-viewer-stats.html
@@ -1,6 +1,6 @@
 <div class="mat-border-divider rounded border border-solid mb-4">
   <div class="mx-4 mt-4">
-    <div class="mat-h3 m-0" i18n="@@streamViewers">Stream viewers</div>
+    <div class="mat-h3 m-0" i18n="@@stream-viewers">Stream viewers</div>
   </div>
 
   <ng-container *ngIf="statsQry | useQry as result">
