--- a/src/app/pages/vtubers-detail/vtuber-streams/vtuber-streams.html
+++ b/src/app/pages/vtubers-detail/vtuber-streams/vtuber-streams.html
@@ -1,4 +1,4 @@
-<div class="mat-h3 font-medium" i18n="@@recentStreams">Recent Streams</div>
+<div class="mat-h3 font-medium" i18n="@@recent-streams">Recent Streams</div>
 
 <ng-container *ngIf="result() as result">
   <div
