chore: update discord invite link

--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -16,7 +16,7 @@
   <span class="flex-1"></span>
 
   <a
-    href="https://discord.gg/wZCj9hrh"
+    href="https://discord.gg/m9NwUzKbkK"
     target="_blank"
     mat-icon-button
     matTooltip="Discord Channel"
