--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -22,8 +22,8 @@
         <a
           class="text-inherit"
           target="_blank"
-          href="https://discord.gg/wZCj9hrh"
-          >https://discord.gg/wZCj9hrh</a
+          href="https://discord.gg/m9NwUzKbkK"
+          >https://discord.gg/m9NwUzKbkK</a
         >.
       </p>
 
