feat: vtuber-detail page styling

--- a/src/app/pages/vtubers-detail/channel-overview/channel-overview.html
+++ b/src/app/pages/vtubers-detail/channel-overview/channel-overview.html
@@ -32,7 +32,7 @@
     />
   </ng-container>
 
-  <ng-container *ngIf="channels[channelIdx].platform === 'YOUTUBE'">
+  <ng-container *ngIf="channels[channelIdx].platform !== 'BILIBILI'">
     <mat-divider class="!my-2" />
 
     <vts-stats-chart
